--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,338 @@
-astroid==2.4.2
+absl-py==0.9.0
+alabaster==0.7.12
+alembic==1.4.2
+anaconda-client==1.7.2
+anaconda-navigator==1.9.12
+anaconda-project==0.8.3
+apache-airflow==1.10.11
+apispec==1.3.3
+applaunchservices==0.2.1
+appnope @ file:///opt/concourse/worker/volumes/live/0291c9e1-4b15-459f-623e-2770f55be269/volume/appnope_1594338395037/work
+appscript @ file:///opt/concourse/worker/volumes/live/50ca4c96-3090-40bb-6981-3a6114ed0af4/volume/appscript_1594840187551/work
+argcomplete==1.12.0
+argh==0.26.2
+argon2-cffi==20.1.0
+asn1crypto==1.4.0
+astroid @ file:///opt/concourse/worker/volumes/live/21fd14a9-2a7e-484b-7394-5a9912cdcf80/volume/astroid_1592498459180/work
+astropy==4.0.1.post1
+astunparse==1.6.3
+atomicwrites==1.4.0
+attrs==19.3.0
+autopep8==1.5.4
+Babel==2.8.0
+backcall==0.2.0
+backports.functools-lru-cache==1.6.1
+backports.shutil-get-terminal-size==1.0.0
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+beautifulsoup4==4.9.1
+bitarray==1.5.1
+bkcharts==0.2
+bleach==3.1.5
+blis==0.4.1
+bokeh @ file:///opt/concourse/worker/volumes/live/eb4a1f42-db74-4fc3-7f34-0189ef49c1a1/volume/bokeh_1593187606262/work
+boto==2.49.0
+Bottleneck==1.3.2
+branca==0.4.1
+brotlipy==0.7.0
+cached-property==1.5.1
+cachetools==4.1.1
+catalogue==2.0.0
+cattrs==1.0.0
 certifi==2020.6.20
+cffi==1.14.1
 chardet==3.0.4
-idna==2.10
-importlib-metadata==1.7.0
-isort==4.3.21
+click==7.1.2
+click-plugins==1.1.1
+cligj==0.5.0
+cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1594141588948/work
+clyent==1.2.2
+colorama==0.4.3
+colorlog==4.0.2
+conda==4.8.3
+conda-build==3.18.11
+conda-package-handling==1.7.0+0.g7c4a471.dirty
+conda-verify==3.4.2
+configparser==3.5.3
+contextlib2==0.6.0.post1
+croniter==0.3.34
+cryptography==3.0
+cycler==0.10.0
+cymem==2.0.3
+Cython @ file:///opt/concourse/worker/volumes/live/6158b663-a4ca-4e19-7e05-8807e4f79146/volume/cython_1594835048880/work
+cytoolz==0.10.1
+dask==2.22.0
+decorator==4.4.2
+defusedxml==0.6.0
+descartes==1.1.0
+diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
+dill==0.3.2
+distributed==2.22.0
+dnspython==2.0.0
+docutils==0.16
+email-validator==1.1.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
+entrypoints==0.3
+et-xmlfile==1.0.1
+fastcache==1.1.0
+filelock==3.0.12
+Fiona==1.8.13.post1
+flake8==3.8.3
+Flask==1.1.2
+Flask-Admin==1.5.4
+Flask-AppBuilder==2.3.4
+Flask-Babel==1.0.0
+Flask-Caching==1.3.3
+Flask-JWT-Extended==3.24.1
+Flask-Login==0.4.1
+Flask-OpenID==1.2.5
+Flask-SQLAlchemy==2.4.4
+flask-swagger==0.2.13
+Flask-WTF==0.14.3
+folium==0.11.0
+fsspec==0.8.0
+funcsigs==1.0.2
+future==0.18.2
+gast==0.3.3
+geopandas==0.8.1
+gevent @ file:///opt/concourse/worker/volumes/live/78aec834-bbf0-47a7-799f-96dd2cf589ab/volume/gevent_1593009579767/work
+glob2==0.7
+gmpy2==2.0.8
+google-auth==1.20.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+graphviz==0.14.1
+greenlet==0.4.16
+grpcio==1.31.0
+gunicorn==19.10.0
+h5py==2.10.0
+HeapDict==1.0.1
+html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
+idna @ file:///tmp/build/80754af9/idna_1593446292537/work
+imageio @ file:///tmp/build/80754af9/imageio_1594161405741/work
+imagesize==1.2.0
+importlib-metadata @ file:///opt/concourse/worker/volumes/live/290b74d5-e5f3-47ff-7257-17b3c9ccecab/volume/importlib-metadata_1593446478206/work
+iniconfig==1.0.1
+intervaltree==3.1.0
+ipykernel==5.3.4
+ipython==7.17.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+iso8601==0.1.12
+isort==5.3.2
+itsdangerous==1.1.0
+jdcal==1.4.1
+jedi==0.17.2
+Jinja2==2.10.3
+joblib @ file:///tmp/build/80754af9/joblib_1594236160679/work
+json-merge-patch==0.2
+json5==0.9.5
 jsonpickle==1.4.1
+jsonschema @ file:///opt/concourse/worker/volumes/live/143dedb7-a810-4064-6e47-436d4dbcc943/volume/jsonschema_1594363611216/work
+jupyter==1.0.0
+jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1594826976318/work
+jupyter-console==6.1.0
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.6.3
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyterlab==2.2.4
+jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1594164409481/work
+Keras-Preprocessing==1.1.2
+keyring==21.3.0
+kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
+libarchive-c==2.9
+llvmlite==0.33.0+1.g022ab0f
+locket==0.2.0
+lockfile==0.12.2
+lxml @ file:///opt/concourse/worker/volumes/live/d42457f0-83be-4fb6-6c8d-8f9319a861b0/volume/lxml_1594826854945/work
+Mako==1.1.3
+Markdown==2.6.11
+MarkupSafe @ file:///opt/concourse/worker/volumes/live/cb778296-98db-45ad-411e-6f726e102dc3/volume/markupsafe_1594371638608/work
+marshmallow==2.21.0
+marshmallow-enum==1.5.1
+marshmallow-sqlalchemy==0.23.1
+matplotlib==3.3.0
 mccabe==0.6.1
-numpy==1.19.1
+mistune @ file:///opt/concourse/worker/volumes/live/95802d64-d39c-491b-74ce-b9326880ca54/volume/mistune_1594373201816/work
+mkl-fft==1.1.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+mock==4.0.2
+more-itertools==8.4.0
+mpmath==1.1.0
+msgpack==1.0.0
+multipledispatch==0.6.0
+munch==2.5.0
+murmurhash==1.0.2
+natsort==7.0.1
+navigator-updater==0.2.1
+nbconvert @ file:///opt/concourse/worker/volumes/live/70406b39-619d-477e-7507-0cc36a02f91a/volume/nbconvert_1594376816864/work
+nbformat==5.0.7
+networkx @ file:///tmp/build/80754af9/networkx_1594377231366/work
+nltk @ file:///tmp/build/80754af9/nltk_1592496090529/work
+nose @ file:///opt/concourse/worker/volumes/live/a029938e-1732-4cd8-5b98-0542283d158b/volume/nose_1594377915100/work
+notebook==6.1.1
+numba==0.50.1
+numexpr==2.7.1
+numpy==1.18.5
+numpydoc @ file:///tmp/build/80754af9/numpydoc_1594166760263/work
 oauthlib==3.1.0
+olefile==0.46
+openpyxl @ file:///tmp/build/80754af9/openpyxl_1594167385094/work
+opt-einsum==3.3.0
+packaging==20.4
 pandas==1.1.0
-pylint==2.5.3
-PySocks==1.7.1
+pandocfilters==1.4.2
+parso==0.7.1
+partd==1.1.0
+path==15.0.0
+pathlib2 @ file:///opt/concourse/worker/volumes/live/de518564-0d9f-405e-472b-38136f0c2169/volume/pathlib2_1594381084269/work
+pathtools==0.1.2
+patsy==0.5.1
+pendulum==1.4.4
+pep8==1.7.1
+pexpect @ file:///opt/concourse/worker/volumes/live/8701bb20-ad87-46c7-5108-30c178cf97e5/volume/pexpect_1594383388344/work
+pickleshare @ file:///opt/concourse/worker/volumes/live/93ec39d8-05bb-4f84-7efc-98735bc39b70/volume/pickleshare_1594384101884/work
+Pillow @ file:///opt/concourse/worker/volumes/live/be1e8a56-c4be-4ffe-4fa7-5a0e9c460b1a/volume/pillow_1594307312933/work
+pkginfo==1.5.0.1
+plac==1.2.0
+pluggy==0.13.1
+ply==3.11
+preshed==3.0.2
+prison==0.1.3
+prometheus-client==0.8.0
+prompt-toolkit==3.0.6
+protobuf==3.12.4
+psutil==5.7.2
+ptyprocess==0.6.0
+py @ file:///tmp/build/80754af9/py_1593446248552/work
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+pycosat==0.6.3
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pycurl==7.43.0.5
+pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1592848020240/work
+pyflakes==2.2.0
+Pygments==2.6.1
+PyJWT==1.7.1
+pylint @ file:///opt/concourse/worker/volumes/live/0a2a544e-806a-4267-74b2-a3f95578c3f2/volume/pylint_1592498630326/work
+pyodbc==4.0.30
+pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
+pyparsing==2.4.7
+pyproj==2.6.1.post1
+pyrsistent==0.16.0
+PySocks @ file:///opt/concourse/worker/volumes/live/85a5b906-0e08-41d9-6f59-084cee4e9492/volume/pysocks_1594394636991/work
+pytesseract==0.3.5
+pytest==6.0.1
+python-daemon==2.2.4
 python-dateutil==2.8.1
+python-dotenv==0.14.0
+python-editor==1.0.4
+python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1594397536060/work
+python-language-server @ file:///opt/concourse/worker/volumes/live/5f0313b4-ff69-4d9d-5c31-e01b223dabd6/volume/python-language-server_1594161914367/work
+python-nvd3==0.15.0
+python-slugify==4.0.1
+python3-openid==3.2.0
 pytz==2020.1
-requests==2.24.0
+pytzdata==2020.1
+PyWavelets==1.1.1
+PyYAML==5.3.1
+pyzmq==19.0.2
+QDarkStyle==2.8.1
+QtAwesome==0.7.2
+qtconsole @ file:///tmp/build/80754af9/qtconsole_1592848611704/work
+QtPy==1.9.0
+regex==2020.7.14
+requests @ file:///tmp/build/80754af9/requests_1592841827918/work
 requests-oauthlib==1.3.0
+rope==0.17.0
+rsa==4.6
+Rtree==0.9.4
+ruamel-yaml==0.15.87
+ruamel.yaml.clib==0.2.0
+scikit-image==0.17.2
+scikit-learn==0.23.2
+scipy==1.4.1
+seaborn==0.10.1
+Send2Trash==1.5.0
+setproctitle==1.1.10
+Shapely==1.7.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.15.0
-toml==0.10.1
+snowballstemmer==2.0.0
+sortedcollections==1.2.1
+sortedcontainers==2.2.2
+soupsieve==2.0.1
+spacy==2.3.2
+Sphinx==3.2.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+sphinxcontrib-websupport==1.2.4
+spyder @ file:///opt/concourse/worker/volumes/live/0e97f897-b36b-4f78-7283-e99903208a48/volume/spyder_1594831780108/work
+spyder-kernels==1.9.3
+SQLAlchemy @ file:///opt/concourse/worker/volumes/live/45657106-f60d-42e1-6501-7d65be3b36ab/volume/sqlalchemy_1593446313078/work
+SQLAlchemy-JSONField==0.9.0
+SQLAlchemy-Utils==0.36.8
+srsly==2.2.0
+statsmodels==0.11.1
+sympy==1.6.2
+tables==3.6.1
+tabulate==0.8.7
+tblib==1.7.0
+tenacity==4.12.0
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.0
+tensorflow-estimator==2.3.0
+termcolor==1.1.0
+terminado==0.8.3
+tesseract==0.1.3
+testpath==0.4.4
+text-unidecode==1.3
+thinc==7.4.1
+threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
+thrift==0.13.0
+tifffile==2020.7.24
+toml @ file:///tmp/build/80754af9/toml_1592853716807/work
+toolz==0.10.0
+torch==1.6.0
+torchvision==0.7.0
+tornado==6.0.4
+tqdm==4.48.2
+traitlets==4.3.3
 tweepy==3.9.0
-typed-ast==1.4.1
+typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1592847887441/work
+tzlocal==1.5.1
+ujson==1.35
+unicodecsv==0.14.1
 urllib3==1.25.10
+wasabi==0.7.1
+watchdog @ file:///opt/concourse/worker/volumes/live/cc0ee7bb-1065-44c4-5867-0fd5d13729e0/volume/watchdog_1593447373245/work
+wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+webencodings==0.5.1
+Werkzeug==0.16.1
+widgetsnbextension==3.5.1
 wrapt==1.12.1
+WTForms==2.3.3
+wurlitzer @ file:///opt/concourse/worker/volumes/live/01a17f3d-eafe-4806-57a1-4b9ef5d1815f/volume/wurlitzer_1594753845129/work
+xlrd==1.2.0
+XlsxWriter==1.3.2
+xlwings==0.20.1
+xlwt==1.3.0
+xmltodict==0.12.0
+yapf @ file:///tmp/build/80754af9/yapf_1593528177422/work
+zict==2.0.0
 zipp==3.1.0
+zope.deprecation==4.4.0
+zope.event==4.4
+zope.interface==5.1.0
